--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,40 @@
 # Python
 __pycache__/
-*.pyc
+*.py[cod]
+*.egg
+*.egg-info/
 *.pyo
 *.pyd
-env/
-venv/
-*.env
+*.db
+*.sqlite3
+*.log
 
-# Node
+# Node.js
 node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 dist/
 build/
 
-# VS Code
-.vscode/
-
-# Environment
+# Env & Secrets
 .env
+*.env
+*.pem
+*.key
+
+# VS Code & OS
+.vscode/
+.DS_Store
+Thumbs.db
 
 # Docker
 *.pid
+logs/
+docker-compose.override.yml
+
+# Jupyter
+.ipynb_checkpoints/
+
+# React build artifacts
+frontend/build/
